# PRISM

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  FRONTEND_PLAN.md  MVP2_PLAN.md  Makefile  PRISM_FRONTEND_RECOMMENDATIONS.md  PRISM_FRONTEND_REFUTAL.md  PRISM_Refined_Plan.md  README.md  ROADMAP.md  UI_PHASE_PLAN.md  docker-compose.prod.yml  docker-compose.yml  gen_classifier.py  pyproject.toml
.claude/: README.md  settings.json  settings.local.json
.claude/agents/: bulk-classifier.md  phase-gate-reviewer.md
.claude/commands/: phase-gate.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_playground.py  0003_clean_entity_names.py  0004_prepa_generation.py  0005_genera_feed.py  0006_crim_parcelas.py  0007_score_history.py  0008_nhc_storm.py  0009_alert_log.py
api/: __init__.py  cache.py  db.py  deps.py  limiter.py  logging_config.py  main.py  metrics.py  schemas.py  worker.py
api/routers/: __init__.py  ask.py  citizen.py  corridor.py  crim.py  economy.py  hazard.py  jobs.py  network.py  playground.py  portfolio.py  provenance.py  reports.py  resilience.py  sitefinder.py  sync.py  system.py  terrain.py  tiles.py  validate.py
catalog/: metadata.json
config/: confidence.yml  crs.yml  model_cards.yml  models.yml  sources.yml  validation_events.yml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.postgis
docker/backup/: backup.sh  restore.sh
docker/initdb/: 01_extensions.sql
docker/nginx/: nginx.conf
docs/: SESSION_HANDOFF.md  catastro_monthly.md  runbook.md
docs/archive/: MVP3_PLAN.md
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
prism/: __init__.py  alerts.py  cache.py  config.py  llm.py
tests/: test_alerts.py  test_api_cache.py  test_ask.py  test_assumptions.py  test_budget_allocator.py  test_citizen.py  test_clean_names.py  test_corridor.py  test_crim.py  test_crim_normalize.py  test_crim_owners.py  test_crim_trends.py  test_downstream_summary.py  test_economy.py  test_graph.py  test_human_sim.py  test_load.py  test_luma_ops.py  test_nhc.py  test_optimize.py  test_playground.py  test_portfolio_narrative.py  test_prepa_ops.py  test_provenance.py  test_report.py  test_resilience.py  test_score_history.py  test_seismic.py  test_sitefinder.py  test_smoke.py  test_storm_consequence.py  test_sync.py  test_terrain_profile.py  test_transport.py  test_validate.py  test_water_graph.py  test_whatsnew.py
(+185 files in other folders)
